# RAGOps

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODE_AUDIT.md  DESIGN_DECISIONS.md  ROADMAP.md  TRACE_DESIGN.md
src/: __init__.py
src/ragops/schemas/: __init__.py  trace.py
src/ragops/tracing/: collector.py  rag_integration.py
src/tracing/: __init__.py  collector.py  rag_integration.py
tests/: test_package_installation.py  test_rag_integration.py  test_trace.py
